--- a/src/GuiApp/FileTime.Uno/FileTime.Uno.Shared/Styles/ListStyles.xaml
+++ b/src/GuiApp/FileTime.Uno/FileTime.Uno.Shared/Styles/ListStyles.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="using:FileTime.Uno.Converters"
@@ -87,7 +87,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <ContentPresenter HorizontalAlignment="Stretch" />
+                    <ContentPresenter 
+                        Content="{TemplateBinding}"
+                        ContentTemplate="{TemplateBinding ContentTemplate}" 
+                        HorizontalAlignment="Stretch" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
