--- a/src/GuiApp/FileTime.Avalonia/App.axaml
+++ b/src/GuiApp/FileTime.Avalonia/App.axaml
@@ -2,57 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:FileTime.Avalonia"
 			 xmlns:converters="using:FileTime.Avalonia.Converters"
+			 xmlns:views="using:FileTime.Avalonia.Views"
              x:Class="FileTime.Avalonia.App">
-    <Application.DataTemplates>
-    </Application.DataTemplates>
-
-    <Application.Styles>
-        <FluentTheme Mode="Light"/>
-
-		<Style Selector="TextBlock">
-			<Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
-		</Style>
-		<Style Selector="TextBlock.SmallText">
-			<Setter Property="FontSize" Value="12"/>
-		</Style>
-		<Style Selector="ListBox.ContentListView">
-			<Setter Property="Background" Value="Transparent"/>
-			<Setter Property="ItemTemplate">
-				<Setter.Value>
-					<DataTemplate>
-						<Grid ColumnDefinitions="Auto,*">
-							<Image
-								Grid.RowSpan="2"
-								Width="20"
-								Height="20"
-								HorizontalAlignment="Left"
-								VerticalAlignment="Center"
-								Source="{SvgImage /Assets/material/folder.svg}" />
-
-							<ItemsControl
-								Grid.Column="1"
-								VerticalAlignment="Center"
-								Items="{Binding DisplayName}">
-								<ItemsControl.ItemsPanel>
-									<ItemsPanelTemplate>
-										<StackPanel Orientation="Horizontal" />
-									</ItemsPanelTemplate>
-								</ItemsControl.ItemsPanel>
-								<ItemsControl.ItemTemplate>
-									<DataTemplate>
-										<Grid>
-											<TextBlock
-												Text="{Binding Text}" />
-										</Grid>
-									</DataTemplate>
-								</ItemsControl.ItemTemplate>
-							</ItemsControl>
-						</Grid>
-					</DataTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-    </Application.Styles>
+	<Application.DataTemplates>
+	</Application.DataTemplates>
 
 	<Application.Resources>
 		<ResourceDictionary>
@@ -64,6 +17,8 @@
 			<Color x:Key="SelectedItemBackgroundColor">#93a1a1</Color>
 
 			<Color x:Key="ForegroundColor">#93a1a1</Color>
+			<Color x:Key="AccentForegroundColor">#268bd2</Color>
+			<Color x:Key="LightForegroundColor">#7793a1a1</Color>
 			<Color x:Key="AlternativeForegroundColor">#93a1a1</Color>
 			<Color x:Key="SelectedItemForegroundColor">#073642</Color>
 
@@ -74,9 +29,9 @@
 				<GradientStop Offset="0.5" Color="#93a1a1" />
 				<GradientStop Offset="1" Color="#0093a1a1" />
 			</LinearGradientBrush>
-			
-			
-			
+
+
+
 			<SolidColorBrush
 				x:Key="AppBackgroundBrush"
 				Color="{DynamicResource AppBackgroundColor}" />
@@ -98,6 +53,12 @@
 				x:Key="ForegroundBrush"
 				Color="{DynamicResource ForegroundColor}" />
 			<SolidColorBrush
+				x:Key="AccentForegroundBrush"
+				Color="{DynamicResource AccentForegroundColor}" />
+			<SolidColorBrush
+				x:Key="LightForegroundBrush"
+				Color="{DynamicResource LightForegroundColor}" />
+			<SolidColorBrush
 				x:Key="AlternativeForegroundBrush"
 				Color="{DynamicResource AlternativeForegroundColor}" />
 			<SolidColorBrush
@@ -108,11 +69,48 @@
 				x:Key="ErrorBrush"
 				Color="{DynamicResource ErrorColor}" />
 
+
+			<SolidColorBrush x:Key="SystemControlHighlightListAccentLowBrush" Color="{DynamicResource SelectedItemBackgroundColor}" />
+
 			<converters:FormatSizeConverter x:Key="FormatSizeConverter"/>
 			<converters:CompareConverter x:Key="EqualityConverter"/>
 			<converters:CompareConverter x:Key="NotEqualsConverter" ComparisonCondition="{x:Static converters:ComparisonCondition.NotEqual}"/>
-
+			<converters:SplitStringConverter x:Key="SplitStringConverter" />
+			<converters:ItemViewModeToBrushConverter 
+				x:Key="ItemViewModeToForegroundConverter" 
+				DefaultBrush="{StaticResource ForegroundBrush}"
+				AlternativeBrush="{StaticResource AlternativeForegroundBrush}"
+				SelectedBrush="{StaticResource SelectedItemForegroundBrush}"/>
+			<converters:ItemViewModeToBrushConverter
+				x:Key="ItemViewModeToBackgroundConverter"
+				DefaultBrush="{StaticResource ItemBackgroundBrush}"
+				AlternativeBrush="{StaticResource AlternativeItemBackgroundBrush}"
+				SelectedBrush="{StaticResource SelectedItemBackgroundBrush}"/>
+			<converters:ContextMenuGenerator x:Key="ContextMenuGenerator"/>
 
 		</ResourceDictionary>
 	</Application.Resources>
+
+	<Application.Styles>
+		<FluentTheme Mode="Light"/>
+
+		<Style Selector="TextBlock">
+			<Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+			<Setter Property="FontSize" Value="16"/>
+		</Style>
+		<Style Selector="TextBlock.SmallText">
+			<Setter Property="FontSize" Value="16"/>
+		</Style>
+		<Style Selector="ListBox.ContentListView">
+			<Setter Property="Background" Value="Transparent"/>
+		</Style>
+		<Style Selector="ListBox.ContentListView > ListBoxItem">
+			<Setter Property="Margin" Value="0"/>
+			<Setter Property="Padding" Value="0"/>
+			<Setter Property="Background" Value="Transparent"/>
+			<Setter Property="ContextMenu">
+				<ContextMenu Items="{Binding Converter={StaticResource ContextMenuGenerator}}"/>
+			</Setter>
+		</Style>
+	</Application.Styles>
 </Application>
