--- a/src/GuiApp/FileTime.Avalonia/Views/MainWindow.axaml
+++ b/src/GuiApp/FileTime.Avalonia/Views/MainWindow.axaml
@@ -89,8 +89,29 @@
 			</Border>
 		</Grid>
 
-		<Grid Grid.Column="1" RowDefinitions="40,*,Auto">
-			<Grid ColumnDefinitions="*,Auto">
+		<Grid Grid.Column="2" RowDefinitions="Auto,40,*,Auto">
+			<Grid>
+				<ItemsControl Items="{Binding TimelineCommands}">
+					<ItemsControl.ItemsPanel>
+						<ItemsPanelTemplate>
+							<StackPanel Orientation="Horizontal" />
+						</ItemsPanelTemplate>
+					</ItemsControl.ItemsPanel>
+					<ItemsControl.ItemTemplate>
+						<DataTemplate>
+							<ItemsControl Items="{Binding Commands}">
+								<ItemsControl.ItemTemplate>
+									<DataTemplate>
+										<TextBlock Text="{Binding}"/>
+									</DataTemplate>
+								</ItemsControl.ItemTemplate>
+							</ItemsControl>
+						</DataTemplate>
+					</ItemsControl.ItemTemplate>
+				</ItemsControl>
+			</Grid>
+
+			<Grid Grid.Row="1" ColumnDefinitions="*,Auto">
 
 				<StackPanel Orientation="Horizontal">
 					<TextBlock
@@ -98,7 +119,7 @@
                         Text="{Binding AppState.SelectedTab.TabNumber,StringFormat=({0})}" />
 
 					<local:PathPresenter Margin="10,5,0,5" DataContext="{Binding AppState.SelectedTab.CurrentLocation.Container.FullName}"/>
-					
+
 					<TextBlock
                         Margin="0,5,10,5"
                         Text="{Binding AppState.SelectedTab.SelectedItem.Item.Name}" Foreground="{StaticResource AccentForegroundBrush}" />
@@ -123,7 +144,7 @@
 
 									<local:PathPresenter Margin="5,0,0,0" DataContext="{Binding CurrentLocation.Container.FullName}"/>
 								</StackPanel>
-								
+
 								<Rectangle Fill="{DynamicResource ForegroundBrush}" Grid.Row="1" IsVisible="{Binding IsSelected}"/>
 							</Grid>
 						</DataTemplate>
@@ -132,7 +153,7 @@
 			</Grid>
 
 			<Grid
-				Grid.Row="1"
+				Grid.Row="2"
 				Margin="20,0,0,0">
 				<Grid>
 					<Grid.ColumnDefinitions>
@@ -146,8 +167,8 @@
 					<Grid>
 						<ListBox
 							Classes="ContentListView"
-                            Items="{Binding AppState.SelectedTab.Parent.Items}"
-                            SelectedItem="{Binding AppState.SelectedTab.CurrentLocation}">
+							IsEnabled="False"
+                            Items="{Binding AppState.SelectedTab.Parent.Items}">
 							<ListBox.ItemTemplate>
 								<DataTemplate>
 									<local:ItemView ShowAttributes="False"/>
@@ -202,6 +223,7 @@
 					<Grid Grid.Column="4">
 						<ListBox
 							Classes="ContentListView"
+							IsEnabled="False"
                             x:Name="ChildItems"
                             Items="{Binding AppState.SelectedTab.ChildContainer.Items}"
                             IsVisible="{Binding AppState.SelectedTab.ChildContainer.Items.Count, Converter={StaticResource NotEqualsConverter}, ConverterParameter=0}">
@@ -223,9 +245,78 @@
 						</TextBlock>
 					</Grid>
 				</Grid>
+
+				<Grid
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					IsVisible="{Binding Inputs, Converter={StaticResource IsNotNullConverter}}">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+
+					<ItemsControl
+                        x:Name="InputList"
+                        Items="{Binding Inputs}">
+						<ItemsControl.ItemTemplate>
+							<DataTemplate>
+								<Grid MinWidth="400">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition MinWidth="200" />
+										<ColumnDefinition Width="*" />
+									</Grid.ColumnDefinitions>
+
+									<TextBlock
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        Text="{Binding InputElement.Text}" />
+									<TextBox
+										AttachedToVisualTree="InputText_AttachedToVisualTree"
+                                        Grid.Column="1"
+										GotFocus="InputText_GotFocus"
+										LostFocus="InputText_LostFocus"
+                                        KeyDown="InputText_KeyDown"
+                                        Text="{Binding Value, Mode=TwoWay}" />
+								</Grid>
+							</DataTemplate>
+						</ItemsControl.ItemTemplate>
+					</ItemsControl>
+					<StackPanel
+                        Grid.Row="1"
+                        Orientation="Horizontal">
+						<Button
+                            Command="{Binding ProcessInputsCommand}"
+                            Content="Ok" />
+						<Button
+                            Command="{Binding CancelInputsCommand}"
+                            Content="Cancel" />
+					</StackPanel>
+				</Grid>
+
+				<Grid
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					IsVisible="{Binding MessageBoxText, Converter={StaticResource IsNotNullConverter}}">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+
+					<TextBlock Text="{Binding MessageBoxText}"/>
+					<StackPanel
+                        Grid.Row="1"
+                        Orientation="Horizontal">
+						<Button
+                            Command="{Binding ProcessMessageBoxCommand}"
+                            Content="Yes" />
+						<Button
+                            Command="{Binding CancelMessageBoxCommand}"
+                            Content="No" />
+					</StackPanel>
+				</Grid>
 			</Grid>
 
-			<Grid Grid.Row="2">
+			<Grid Grid.Row="3">
 				<Grid IsVisible="{Binding AppState.ViewMode, Converter={StaticResource EqualityConverter}, ConverterParameter=RapidTravel}">
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1" />
